Update and rename dynamic_webscrapping_Wallapop.ipynb to dynamic_webscraping_Wallapop.ipynb
correcting spelling mistakes

--- a/dynamic_webscraping_Wallapop.ipynb
+++ b/dynamic_webscraping_Wallapop.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "# Web-Scraping Wallapop\n",
-    "This notebook uses dynamic web-scrapping to store data from Wallapop. The main library deployed is Selenium.\n",
+    "This notebook uses dynamic web-scraping to store data from Wallapop. The main library deployed is Selenium.\n",
     "\n",
-    "*Note: This notebook was developped in December 2022, so Wallapop's webpage structure may have varied. For reproduction, the webscrapping items and filtering conditions may need to vary.*"
+    "*Note: This notebook was developped in December 2022, so Wallapop's webpage structure may have varied. For reproduction, the web scraping items and filtering conditions may need to vary.*"
    ]
   },
   {
